data clean 02 and data storage 01.

--- a/source/DataClean-02.ipynb
+++ b/source/DataClean-02.ipynb
@@ -1450,34 +1450,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce04d639",
+   "metadata": {},
+   "source": [
+    "## Drop the rows that 'time' before 2020"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "092d46a3",
+   "id": "e35c25f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14940 entries, 0 to 14939\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column      Non-Null Count  Dtype         \n",
-      "---  ------      --------------  -----         \n",
-      " 0   user_name   14940 non-null  object        \n",
-      " 1   facs_score  14940 non-null  float64       \n",
-      " 2   envr_score  14940 non-null  float64       \n",
-      " 3   serv_score  14940 non-null  float64       \n",
-      " 4   review      14940 non-null  object        \n",
-      " 5   time        14940 non-null  datetime64[ns]\n",
-      " 6   from        14940 non-null  object        \n",
-      "dtypes: datetime64[ns](1), float64(3), object(3)\n",
-      "memory usage: 817.2+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.info()"
+    "df = df[df['time'] >= '2020-01-01 00:00:00']\n",
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
