data clean 02 and data storage 01.

--- a/source/DataClean-02.ipynb
+++ b/source/DataClean-02.ipynb
@@ -108,84 +108,24 @@
        "      <td>2023-04-16 21:47</td>\n",
        "      <td>北京apm</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>点小评8259534987</td>\n",
-       "      <td>设施：0.5</td>\n",
-       "      <td>环境：0.5</td>\n",
-       "      <td>服务：0.5</td>\n",
-       "      <td>一个座位都没有 想坐下休息会的地方都没有 逛累了直接让顾客滚蛋呗？</td>\n",
-       "      <td>2023-04-16 13:17</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>小翼</td>\n",
-       "      <td>设施：4.0</td>\n",
-       "      <td>环境：4.0</td>\n",
-       "      <td>服务：4.0</td>\n",
-       "      <td>打卡北京apm中庭的花young春日艺术展\\n一些纸花，一些艺术家的画，还有一些假花。\\n别...</td>\n",
-       "      <td>2023-04-15 19:15</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>小zhang爱看海</td>\n",
-       "      <td>设施：5.0</td>\n",
-       "      <td>环境：5.0</td>\n",
-       "      <td>服务：5.0</td>\n",
-       "      <td>整体给人的感觉很繁华，位于王府井大街，里面基本上都是连锁品牌</td>\n",
-       "      <td>2023-04-15 18:39</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>openze</td>\n",
-       "      <td>设施：5.0</td>\n",
-       "      <td>环境：5.0</td>\n",
-       "      <td>服务：5.0</td>\n",
-       "      <td>APM艺术展也太好看了吧！来逛街发现一层中庭有艺术展，颜色鲜艳的花卉主题，好多小朋友都抢着拍...</td>\n",
-       "      <td>2023-04-15 16:28</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>爱吃西瓜的妮妮爱吃</td>\n",
-       "      <td>设施：4.0</td>\n",
-       "      <td>环境：4.0</td>\n",
-       "      <td>服务：4.0</td>\n",
-       "      <td>周末出门吃饭路过商场，\\n被这个打造的春日小花园惊喜到～\\n\\n👧然女孩：在不安的世界里，安...</td>\n",
-       "      <td>2023-04-15 15:33</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       user_name facs_score envr_score serv_score  \\\n",
-       "0            牙大酥     设施：5.0     环境：5.0     服务：5.0   \n",
-       "1           磕磕绊绊     设施：5.0     环境：5.0     服务：5.0   \n",
-       "2           吃货阿浪     设施：5.0     环境：5.0     服务：5.0   \n",
-       "3            祁清和     设施：4.5     环境：4.5     服务：4.5   \n",
-       "4            樱桃子     设施：4.5     环境：4.5     服务：4.5   \n",
-       "5  点小评8259534987     设施：0.5     环境：0.5     服务：0.5   \n",
-       "6             小翼     设施：4.0     环境：4.0     服务：4.0   \n",
-       "7      小zhang爱看海     设施：5.0     环境：5.0     服务：5.0   \n",
-       "8         openze     设施：5.0     环境：5.0     服务：5.0   \n",
-       "9      爱吃西瓜的妮妮爱吃     设施：4.0     环境：4.0     服务：4.0   \n",
+       "  user_name facs_score envr_score serv_score  \\\n",
+       "0       牙大酥     设施：5.0     环境：5.0     服务：5.0   \n",
+       "1      磕磕绊绊     设施：5.0     环境：5.0     服务：5.0   \n",
+       "2      吃货阿浪     设施：5.0     环境：5.0     服务：5.0   \n",
+       "3       祁清和     设施：4.5     环境：4.5     服务：4.5   \n",
+       "4       樱桃子     设施：4.5     环境：4.5     服务：4.5   \n",
        "\n",
        "                                              review              time   from  \n",
        "0  特别赞的一家商场，在王府井这个商场云集和大牌云集的地方，apm商场算是人气特别高的了。\\n交...  2023-04-17 23:12  北京apm  \n",
        "1  LINLEE在王府井apm也开新店了，超级喜欢他们家的口味，和朋友逛街无意看到的，果断去买一...  2023-04-17 21:22  北京apm  \n",
        "2  北京apm \\n东城区商场热门榜第一名☝️🥇\\n王府井大街138号\\n环境：商场环境干净整齐...  2023-04-17 21:05  北京apm  \n",
        "3  一定要错过下午5点半以后，不然吃饭只能排队等半个小时，而且拿到号了一定别因为还有十几桌就走开...  2023-04-17 10:19  北京apm  \n",
-       "4  花·Young 的年华……\\n2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7...  2023-04-16 21:47  北京apm  \n",
-       "5                  一个座位都没有 想坐下休息会的地方都没有 逛累了直接让顾客滚蛋呗？  2023-04-16 13:17  北京apm  \n",
-       "6  打卡北京apm中庭的花young春日艺术展\\n一些纸花，一些艺术家的画，还有一些假花。\\n别...  2023-04-15 19:15  北京apm  \n",
-       "7                     整体给人的感觉很繁华，位于王府井大街，里面基本上都是连锁品牌  2023-04-15 18:39  北京apm  \n",
-       "8  APM艺术展也太好看了吧！来逛街发现一层中庭有艺术展，颜色鲜艳的花卉主题，好多小朋友都抢着拍...  2023-04-15 16:28  北京apm  \n",
-       "9  周末出门吃饭路过商场，\\n被这个打造的春日小花园惊喜到～\\n\\n👧然女孩：在不安的世界里，安...  2023-04-15 15:33  北京apm  "
+       "4  花·Young 的年华……\\n2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7...  2023-04-16 21:47  北京apm  "
       ]
      },
      "execution_count": 3,
@@ -194,7 +134,7 @@
     }
    ],
    "source": [
-    "df.head(10)"
+    "df.head()"
    ]
   },
   {
@@ -232,7 +172,7 @@
    "id": "5b5e3470",
    "metadata": {},
    "source": [
-    "## Format three columns (facs_score, envr_score, serv_score)"
+    "## 1. Format three columns (facs_score, envr_score, serv_score)"
    ]
   },
   {
@@ -386,84 +326,24 @@
        "      <td>2023-04-16 21:47</td>\n",
        "      <td>北京apm</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>点小评8259534987</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>一个座位都没有 想坐下休息会的地方都没有 逛累了直接让顾客滚蛋呗？</td>\n",
-       "      <td>2023-04-16 13:17</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>小翼</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>打卡北京apm中庭的花young春日艺术展\\n一些纸花，一些艺术家的画，还有一些假花。\\n别...</td>\n",
-       "      <td>2023-04-15 19:15</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>小zhang爱看海</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>整体给人的感觉很繁华，位于王府井大街，里面基本上都是连锁品牌</td>\n",
-       "      <td>2023-04-15 18:39</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>openze</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>APM艺术展也太好看了吧！来逛街发现一层中庭有艺术展，颜色鲜艳的花卉主题，好多小朋友都抢着拍...</td>\n",
-       "      <td>2023-04-15 16:28</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>爱吃西瓜的妮妮爱吃</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>周末出门吃饭路过商场，\\n被这个打造的春日小花园惊喜到～\\n\\n👧然女孩：在不安的世界里，安...</td>\n",
-       "      <td>2023-04-15 15:33</td>\n",
-       "      <td>北京apm</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       user_name  facs_score  envr_score  serv_score  \\\n",
-       "0            牙大酥         5.0         5.0         5.0   \n",
-       "1           磕磕绊绊         5.0         5.0         5.0   \n",
-       "2           吃货阿浪         5.0         5.0         5.0   \n",
-       "3            祁清和         4.5         4.5         4.5   \n",
-       "4            樱桃子         4.5         4.5         4.5   \n",
-       "5  点小评8259534987         0.5         0.5         0.5   \n",
-       "6             小翼         4.0         4.0         4.0   \n",
-       "7      小zhang爱看海         5.0         5.0         5.0   \n",
-       "8         openze         5.0         5.0         5.0   \n",
-       "9      爱吃西瓜的妮妮爱吃         4.0         4.0         4.0   \n",
+       "  user_name  facs_score  envr_score  serv_score  \\\n",
+       "0       牙大酥         5.0         5.0         5.0   \n",
+       "1      磕磕绊绊         5.0         5.0         5.0   \n",
+       "2      吃货阿浪         5.0         5.0         5.0   \n",
+       "3       祁清和         4.5         4.5         4.5   \n",
+       "4       樱桃子         4.5         4.5         4.5   \n",
        "\n",
        "                                              review              time   from  \n",
        "0  特别赞的一家商场，在王府井这个商场云集和大牌云集的地方，apm商场算是人气特别高的了。\\n交...  2023-04-17 23:12  北京apm  \n",
        "1  LINLEE在王府井apm也开新店了，超级喜欢他们家的口味，和朋友逛街无意看到的，果断去买一...  2023-04-17 21:22  北京apm  \n",
        "2  北京apm \\n东城区商场热门榜第一名☝️🥇\\n王府井大街138号\\n环境：商场环境干净整齐...  2023-04-17 21:05  北京apm  \n",
        "3  一定要错过下午5点半以后，不然吃饭只能排队等半个小时，而且拿到号了一定别因为还有十几桌就走开...  2023-04-17 10:19  北京apm  \n",
-       "4  花·Young 的年华……\\n2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7...  2023-04-16 21:47  北京apm  \n",
-       "5                  一个座位都没有 想坐下休息会的地方都没有 逛累了直接让顾客滚蛋呗？  2023-04-16 13:17  北京apm  \n",
-       "6  打卡北京apm中庭的花young春日艺术展\\n一些纸花，一些艺术家的画，还有一些假花。\\n别...  2023-04-15 19:15  北京apm  \n",
-       "7                     整体给人的感觉很繁华，位于王府井大街，里面基本上都是连锁品牌  2023-04-15 18:39  北京apm  \n",
-       "8  APM艺术展也太好看了吧！来逛街发现一层中庭有艺术展，颜色鲜艳的花卉主题，好多小朋友都抢着拍...  2023-04-15 16:28  北京apm  \n",
-       "9  周末出门吃饭路过商场，\\n被这个打造的春日小花园惊喜到～\\n\\n👧然女孩：在不安的世界里，安...  2023-04-15 15:33  北京apm  "
+       "4  花·Young 的年华……\\n2023年3🈷️31日～～5月3日，北京apm首层中庭，迎来7...  2023-04-16 21:47  北京apm  "
       ]
      },
      "execution_count": 9,
@@ -472,7 +352,15 @@
     }
    ],
    "source": [
-    "df.head(10)"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0624f4",
+   "metadata": {},
+   "source": [
+    "### Check the Outcome"
    ]
   },
   {
@@ -678,7 +566,7 @@
    "id": "fb8d2b32",
    "metadata": {},
    "source": [
-    "## Format one columns (time)"
+    "## 2. Format one column (time)"
    ]
   },
   {
@@ -1386,6 +1274,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e12d9b55",
+   "metadata": {},
+   "source": [
+    "### Only Keep the Str behind '更新于'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "df42348e",
@@ -1440,6 +1336,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "023d8f25",
+   "metadata": {},
+   "source": [
+    "### Change dtype to Datetime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "1691dc8a",
@@ -1450,16 +1354,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "587ef7dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_name             object\n",
+       "facs_score           float64\n",
+       "envr_score           float64\n",
+       "serv_score           float64\n",
+       "review                object\n",
+       "time          datetime64[ns]\n",
+       "from                  object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ce04d639",
    "metadata": {},
    "source": [
-    "## Drop the rows that 'time' before 2020"
+    "## 3. Drop the rows ( 'time' before 2020 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "id": "38054155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "共有 14940 条数据\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_rows = df.shape[0]\n",
+    "print(\"共有 {} 条数据\".format(num_rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "e35c25f5",
    "metadata": {},
    "outputs": [],
@@ -1469,21 +1420,263 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "77378862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "共有 11307 条数据\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_rows = df.shape[0]\n",
+    "print(\"共有 {} 条数据\".format(num_rows))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "74f666dc",
+   "id": "0480d328",
    "metadata": {},
    "source": [
-    "## Save the new cleaned data"
+    "## 4. Drop the rows ( 'review' is too short )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
+   "id": "7cdae9d8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        148\n",
+      "1        147\n",
+      "2        120\n",
+      "3         60\n",
+      "4        111\n",
+      "        ... \n",
+      "11302     30\n",
+      "11303     98\n",
+      "11304    112\n",
+      "11305    149\n",
+      "11306    176\n",
+      "Name: review, Length: 11307, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "char_count_series = df['review'].apply(lambda x: len(str(x)))\n",
+    "print(char_count_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "edaad315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['review'].str.len() >= 10]\n",
+    "df = df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "88dc174a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "共有 11307 条数据\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_rows = df.shape[0]\n",
+    "print(\"共有 {} 条数据\".format(num_rows))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74f666dc",
+   "metadata": {},
+   "source": [
+    "## 4. Save the new cleaned data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08becaf5",
+   "metadata": {},
+   "source": [
+    "### Save as Groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a132b51a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped = df.groupby('from')\n",
+    "\n",
+    "folder_name = '../data'\n",
+    "\n",
+    "for name, group in grouped:\n",
+    "    filename = f'{folder_name}/{name}.csv'\n",
+    "    group.to_csv(filename, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec28f27c",
+   "metadata": {},
+   "source": [
+    "### Save the Total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "0403b15d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/stores_clean.csv', encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24cd2782",
+   "metadata": {},
+   "source": [
+    "## Store the data in SQLite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b0e54f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "953daca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取当前工作目录的路径\n",
+    "dir_path = %pwd\n",
+    "\n",
+    "# 连接到SQLite数据库\n",
+    "conn = sqlite3.connect('../warehouse/stores.db')\n",
+    "\n",
+    "# 定义文件名和表名的对应关系\n",
+    "file_table_dict = {\n",
+    "    '../data/stores_clean.csv': '王府井商圈', \n",
+    "    '../data/北京apm.csv': '北京apm',\n",
+    "    '../data/王府中環.csv': '王府中環',\n",
+    "    '../data/王府井百货.csv': '王府井百货',\n",
+    "    '../data/东方新天地.csv': '东方新天地'\n",
+    "}\n",
+    "\n",
+    "# 遍历所有CSV文件\n",
+    "for filename, table_name in file_table_dict.items():\n",
+    "    # 获取文件的绝对路径\n",
+    "    file_path = os.path.join(dir_path, filename)\n",
+    "\n",
+    "    # 读取CSV文件并存储到SQLite数据库中\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    df.to_sql(table_name, conn, if_exists='replace', index=False)\n",
+    "\n",
+    "# 关闭连接\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "52a841af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['王府井商圈', '北京apm', '王府中環', '王府井百货', '东方新天地']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 连接到SQLite数据库\n",
+    "conn = sqlite3.connect('../warehouse/stores.db')\n",
+    "\n",
+    "# 获取所有表格的名称\n",
+    "cursor = conn.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "tables = [row[0] for row in cursor.fetchall()]\n",
+    "\n",
+    "# 输出所有表格的名称\n",
+    "print(tables)\n",
+    "\n",
+    "# 关闭连接\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9b8ac22c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数据表 '王府井商圈' 中有 11307 条数据。\n",
+      "数据表 '北京apm' 中有 4565 条数据。\n",
+      "数据表 '王府中環' 中有 3463 条数据。\n",
+      "数据表 '王府井百货' 中有 1918 条数据。\n",
+      "数据表 '东方新天地' 中有 1361 条数据。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 连接到SQLite数据库\n",
+    "conn = sqlite3.connect('../warehouse/stores.db')\n",
+    "\n",
+    "# 定义查询语句\n",
+    "query = 'SELECT COUNT(*) FROM {}'\n",
+    "\n",
+    "# 遍历所有表格并打印行数\n",
+    "for table_name in ['王府井商圈','北京apm', '王府中環', '王府井百货', '东方新天地']:\n",
+    "    # 执行查询语句并获取结果\n",
+    "    result = conn.execute(query.format(table_name)).fetchone()\n",
+    "    row_count = result[0]\n",
+    "\n",
+    "    # 打印结果\n",
+    "    print(f\"数据表 '{table_name}' 中有 {row_count} 条数据。\")\n",
+    "\n",
+    "# 关闭连接\n",
+    "conn.close()"
    ]
   }
  ],
