content mining 01 and add file:source/stopwords.

--- a/source/DataClean-02.ipynb
+++ b/source/DataClean-02.ipynb
@@ -1580,17 +1580,17 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "953daca3",
+   "id": "c53aeb27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 获取当前工作目录的路径\n",
+    "# Get the current working directory path\n",
     "dir_path = %pwd\n",
     "\n",
-    "# 连接到SQLite数据库\n",
+    "# Connect to the SQLite database\n",
     "conn = sqlite3.connect('../warehouse/stores.db')\n",
     "\n",
-    "# 定义文件名和表名的对应关系\n",
+    "# Define the correspondence between file names and table names\n",
     "file_table_dict = {\n",
     "    '../data/stores_clean.csv': '王府井商圈', \n",
     "    '../data/北京apm.csv': '北京apm',\n",
@@ -1599,17 +1599,17 @@
     "    '../data/东方新天地.csv': '东方新天地'\n",
     "}\n",
     "\n",
-    "# 遍历所有CSV文件\n",
+    "# Loop through all CSV files\n",
     "for filename, table_name in file_table_dict.items():\n",
-    "    # 获取文件的绝对路径\n",
+    "    # Get the absolute path of the file\n",
     "    file_path = os.path.join(dir_path, filename)\n",
     "\n",
-    "    # 读取CSV文件并存储到SQLite数据库中\n",
+    "    # Read the CSV file and store it in the SQLite database\n",
     "    df = pd.read_csv(file_path)\n",
     "    df.to_sql(table_name, conn, if_exists='replace', index=False)\n",
     "\n",
-    "# 关闭连接\n",
-    "conn.close()"
+    "# Close the connection\n",
+    "conn.close()\n"
    ]
   },
   {
@@ -1627,18 +1627,18 @@
     }
    ],
    "source": [
-    "# 连接到SQLite数据库\n",
+    "# Connect to SQLite database\n",
     "conn = sqlite3.connect('../warehouse/stores.db')\n",
     "\n",
-    "# 获取所有表格的名称\n",
+    "# Get the names of all tables\n",
     "cursor = conn.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
     "tables = [row[0] for row in cursor.fetchall()]\n",
     "\n",
-    "# 输出所有表格的名称\n",
+    "# Print the names of all tables\n",
     "print(tables)\n",
     "\n",
-    "# 关闭连接\n",
-    "conn.close()"
+    "# Close the connection\n",
+    "conn.close()\n"
    ]
   },
   {
@@ -1651,31 +1651,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据表 '王府井商圈' 中有 11307 条数据。\n",
-      "数据表 '北京apm' 中有 4565 条数据。\n",
-      "数据表 '王府中環' 中有 3463 条数据。\n",
-      "数据表 '王府井百货' 中有 1918 条数据。\n",
-      "数据表 '东方新天地' 中有 1361 条数据。\n"
+      "There are 11307 rows in table '王府井商圈'.\n",
+      "There are 4565 rows in table '北京apm'.\n",
+      "There are 3463 rows in table '王府中環'.\n",
+      "There are 1918 rows in table '王府井百货'.\n",
+      "There are 1361 rows in table '东方新天地'.\n"
      ]
     }
    ],
    "source": [
-    "# 连接到SQLite数据库\n",
+    "# Connect to SQLite database\n",
     "conn = sqlite3.connect('../warehouse/stores.db')\n",
     "\n",
-    "# 定义查询语句\n",
+    "# Define the query statement\n",
     "query = 'SELECT COUNT(*) FROM {}'\n",
     "\n",
-    "# 遍历所有表格并打印行数\n",
-    "for table_name in ['王府井商圈','北京apm', '王府中環', '王府井百货', '东方新天地']:\n",
-    "    # 执行查询语句并获取结果\n",
+    "# Iterate over all tables and print the number of rows\n",
+    "for table_name in ['王府井商圈', '北京apm', '王府中環', '王府井百货', '东方新天地']:\n",
+    "    # Execute the query and get the result\n",
     "    result = conn.execute(query.format(table_name)).fetchone()\n",
     "    row_count = result[0]\n",
     "\n",
-    "    # 打印结果\n",
-    "    print(f\"数据表 '{table_name}' 中有 {row_count} 条数据。\")\n",
+    "    # Print the result\n",
+    "    print(f\"There are {row_count} rows in table '{table_name}'.\")\n",
     "\n",
-    "# 关闭连接\n",
+    "# Close the connection\n",
     "conn.close()"
    ]
   }
