mid-term check and revision, this is a new starting point.

--- a/source/Content-Mining-01.ipynb
+++ b/source/Content-Mining-01.ipynb
@@ -30,7 +30,7 @@
    "id": "d6d7d63c",
    "metadata": {},
    "source": [
-    "## For Store1 : 北京apm"
+    "# For Store1 : 北京apm"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "id": "c13934e8",
    "metadata": {},
    "source": [
-    "## For Store2 : 王府中環"
+    "# For Store2 : 王府中環"
    ]
   },
   {
@@ -742,7 +742,7 @@
    "id": "ddff77ba",
    "metadata": {},
    "source": [
-    "## For Store3 : 王府井百货"
+    "# For Store3 : 王府井百货"
    ]
   },
   {
@@ -1093,7 +1093,7 @@
    "id": "54e7f908",
    "metadata": {},
    "source": [
-    "## For Store4 : 东方新天地"
+    "# For Store4 : 东方新天地"
    ]
   },
   {
